--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-source-datocms": "^2.3.0",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-source-graphql": "^2.7.1",
     "gatsby-source-instagram": "^0.8.0",
