--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.63",
+    "gatsby": "^2.24.65",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-google-analytics": "^2.3.14",
     "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-robots-txt": "^1.5.2",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-sitemap": "^2.4.13",
-    "gatsby-source-datocms": "^2.4.1",
+    "gatsby-source-datocms": "^2.5.2",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-source-graphql": "^2.7.4",
     "gatsby-source-instagram": "^0.9.0",
@@ -39,7 +39,7 @@
     "react-slick": "^0.27.11"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
