--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parisetailleurs-website",
   "private": true,
   "description": "Paris et Ailleurs",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -16,19 +16,20 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.31.1",
-    "gatsby-image": "^2.10.0",
-    "gatsby-plugin-google-analytics": "^2.10.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby": "^3.0.1",
+    "gatsby-image": "^3.0.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.13.4",
-    "gatsby-plugin-sitemap": "^2.11.0",
-    "gatsby-source-datocms": "^2.5.8",
-    "gatsby-source-filesystem": "^2.10.0",
-    "gatsby-source-graphql": "^2.13.0",
+    "gatsby-plugin-sass": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-source-datocms": "^2.5.17",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-graphql": "^3.0.0",
     "gatsby-source-instagram": "^0.9.0",
-    "gatsby-transformer-sharp": "^2.11.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
