--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parisetailleurs-website",
   "private": true,
   "description": "Paris et Ailleurs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.0.0",
+    "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
