--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gatsby-source-datocms": "^2.6.12",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-source-graphql": "^3.3.0",
+    "gatsby-source-instagram": "^0.9.0",
+    "gatsby-source-instagram-all": "^3.0.5",
     "gatsby-transformer-sharp": "^3.3.0",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
