--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-slick": "^0.28.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "prettier": "^2.2.1"
   },
   "repository": {
