--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "gatsby-source-graphql": "^3.5.0",
     "gatsby-source-instagram-all": "^4.2.0",
     "gatsby-transformer-sharp": "^3.5.0",
-    "node-sass": "^6.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-masonry-css": "^1.0.16",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "sass": "^1.32.13"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
